--- a/web-customer-tracker/pom.xml
+++ b/web-customer-tracker/pom.xml
@@ -100,6 +100,13 @@
 			<version>2.0.2</version>
 		</dependency>
 
+		<!-- Log4J -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+			<scope>runtime</scope>
+		</dependency>
 
 	</dependencies>
 
