--- a/web-customer-tracker/pom.xml
+++ b/web-customer-tracker/pom.xml
@@ -11,7 +11,8 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<springframework.version>5.3.10</springframework.version>
+		<springframework.version>5.3.9</springframework.version>
+		<springframework.security.version>5.5.2</springframework.security.version>
 		<hibernate.version>5.5.7.Final</hibernate.version>
 		<mysql.connector.version>8.0.26</mysql.connector.version>
 		<c3po.version>0.9.5.5</c3po.version>
@@ -106,6 +107,21 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${springframework.security.version}</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${springframework.security.version}</version>
+			<scope>compile</scope>
 		</dependency>
 
 	</dependencies>
