--- a/customer-tracker/pom.xml
+++ b/customer-tracker/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.crm</groupId>
 	<artifactId>customer-tracker</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>customer-tracker</name>
 	<description>Demo project for Spring Boot</description>
@@ -154,7 +154,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/TonyHC/Web-Customer-Tracker.git</developerConnection>
-		<tag>customer-tracker-1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 </project>
