--- a/customer-tracker/pom.xml
+++ b/customer-tracker/pom.xml
@@ -112,6 +112,11 @@
 			<version>3.8.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
