--- a/customer-tracker/pom.xml
+++ b/customer-tracker/pom.xml
@@ -15,7 +15,7 @@
 
 	<groupId>com.crm</groupId>
 	<artifactId>customer-tracker</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<packaging>pom</packaging>
 	<name>customer-tracker</name>
 	<description>Customer Relationship Manager</description>
@@ -51,7 +51,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/TonyHC/Web-Customer-Tracker.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>customer-tracker-1.1</tag>
 	</scm>
 
 </project>
