--- a/customer-tracker/crm-data/pom.xml
+++ b/customer-tracker/crm-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>customer-tracker</artifactId>
         <groupId>com.crm</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
