--- a/customer-tracker/crm-web/pom.xml
+++ b/customer-tracker/crm-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>customer-tracker</artifactId>
         <groupId>com.crm</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>com.crm</groupId>
             <artifactId>crm-data</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
