--- a/customer-tracker/docker-compose.yml
+++ b/customer-tracker/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   mysql:
-    image: mysql/mysql-server:latest
-    container_name: mysql
+    build: ./docker/database
+    container_name: mysql-crm
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_0900_ai_ci
     environment:
       MYSQL_ROOT_PASSWORD: password
     volumes:
-      - ./docker/database:/docker-entrypoint-initdb.d
+      - mysql:/var/lib/mysql
     ports:
       - "3308:3306"
     expose:
@@ -15,8 +15,8 @@ services:
       - mysql
     restart: always
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin-mysql
+    image: phpmyadmin/phpmyadmin:5.2.0
+    container_name: phpmyadmin-mysql-crm
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
@@ -44,3 +44,6 @@ services:
 networks:
   mysql:
     driver: bridge
+
+volumes:
+  mysql:
