Update the docker-compose file and associated files to set up two MySQL containers for the customer-tracker web application
One MySQL container stores the customer-related information, while the other MySQL is used to store user information.

--- a/customer-tracker/crm-web/src/main/resources/application-docker.properties
+++ b/customer-tracker/crm-web/src/main/resources/application-docker.properties
@@ -1,11 +1,11 @@
 # Customer Data
-app.datasource.customer.url=jdbc:mysql://mysql:3306/web_customer_tracker?useSSL=false&serverTimezone=UTC
+app.datasource.customer.url=jdbc:mysql://mysql-customer-tracker:3306/web_customer_tracker
 app.datasource.customer.username=root
 app.datasource.customer.password=password
 app.datasource.customer.driver=com.mysql.cj.jdbc.Driver
 
 # Security Data
-app.datasource.security.url=jdbc:mysql://mysql:3306/spring_security_custom_user?useSSL=false&serverTimezone=UTC
+app.datasource.security.url=jdbc:mysql://mysql-custom-user:3306/spring_security_custom_user
 app.datasource.security.username=root
 app.datasource.security.password=password
 app.datasource.security.driver=com.mysql.cj.jdbc.Driver
