--- a/customer-tracker/crm-web/src/main/resources/application.properties
+++ b/customer-tracker/crm-web/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Customer Data
-app.datasource.customer.url=jdbc:mysql://localhost:3308/web_customer_tracker?useSSL=false&serverTimezone=UTC
+app.datasource.customer.url=jdbc:mysql://localhost:3308/web_customer_tracker
 app.datasource.customer.username=root
 app.datasource.customer.password=password
 app.datasource.customer.driver=com.mysql.cj.jdbc.Driver
 
 # Security Data
-app.datasource.security.url=jdbc:mysql://localhost:3308/spring_security_custom_user?useSSL=false&serverTimezone=UTC
+app.datasource.security.url=jdbc:mysql://localhost:3309/spring_security_custom_user
 app.datasource.security.username=root
 app.datasource.security.password=password
 app.datasource.security.driver=com.mysql.cj.jdbc.Driver
