--- a/customer-tracker/k8s/bootstrap/mysql/custom-user/secret.yaml
+++ b/customer-tracker/k8s/bootstrap/mysql/custom-user/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-secret
+  name: mysql-custom-user-secret
 type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: cGFzc3dvcmQ=
