--- a/customer-tracker/k8s/bootstrap/mysql/customer-tracker/cluster-ip-service.yaml
+++ b/customer-tracker/k8s/bootstrap/mysql/customer-tracker/cluster-ip-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: mysql-customer-tracker
 spec:
   selector:
-    component: mysql
+    component: mysql-customer-tracker-deployment
   ports:
     - port: 3306
       targetPort: 3306
