--- a/customer-tracker/skaffold.yaml
+++ b/customer-tracker/skaffold.yaml
@@ -3,7 +3,8 @@ kind: Config
 deploy:
   kubectl:
     manifests:
-      - ./k8s/bootstrap/mysql/*
+      - ./k8s/bootstrap/mysql/customer-tracker/*
+      - ./k8s/bootstrap/mysql/custom-user/*
       - ./k8s/services/crm/*
 build:
   local:
